--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Don't show (useless) index number in mutli-value varslots and valueslots
 - Make the option to disable / enable editing more visible (in the data editor's toolbar)
 - Do not invoke symbol name completion while in the middle (not end) of a word
 - Add context menu to HTML viewer window, including the ability to open links in a new window
