Remove obsolete write_table plugin

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+- Remove obsolete "Export tabular data" plugin (superceded by "Export Table / CSV")
 - Some usability refinements to "Import CVS" plugin
 - Disabled the "Import Data"-dialog, as it was considered too confusing. The individual importers are still available from the menu, separately.
 - For multi-item varslots and valueslots, use separate buttons for adding / removing items
